update y delete de countries
